# sensor_client

./: Cargo.toml  munin.sh
src/: cli.rs  main.rs
src/client/: mod.rs
