[package]
name = "sensor_client"
version = "0.2.4"
authors = ["Michael Watzko <michael@watzko.de>"]
description = "CLI to communicate with embedded sensors over ethernet via sensor_common protocol"
keywords = ["ethernet", "cli"]
categories = ["network-programming", "command-line-interface"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kellerkindt/sensor_client"

[dependencies]
byteorder = { version = "1.2.1", default-features = false }
random = "0.12.2"
clap = "2.31.2"

[dependencies.sensor_common]
version = "*"
path = "../sensor_common"

[dependencies.onewire]
version = "*"
path = "../onewire"
